# working_utilities

./: .gitignore  .travis.yml  README.md  pyproject.toml
julia/: installation_script.sh  julia_utilities.jl
python/: coding.py  colors.py  lists.py  nih.py  python_utilities.py  random.py  stats.py  texts.py
python/databases/: mongo.py  mysql.py
tests/: test_lists.py  test_texts.py  test_utilities_lists.py  test_utilities_texts.py
utilities/: coding.py  emails.py  graphs.py  lists.py  stats.py  texts.py
utilities/databases/: mongo.py  mysql.py
