[tool.poetry]
name = "utilities"
version = "0.1.0"
description = ""
authors = ["emeric.dynomant@gmail.com <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.4"
numpy = "^1.18.3"
unidecode = "^1.1.1"
nltk = "^3.5"
pymongo = "^3.10.1"
matplotlib = "^3.2.1"
scipy = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
